test-suite/tests/roundtrip/invalid/syntax/missing_token/09/via-conjure.expected-error.txt
Error running `conjure pretty`: Error: tests/roundtrip/invalid/syntax/missing_token/09/input.essence:2:1:
  |
2 | <empty line>
  | ^
Missing )

